Finalize bulma layout that looks decent

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -19,3 +19,11 @@
 .hover-underline:hover {
   text-decoration: underline;
 }
+
+.bg-green-400 {
+  background-color: #31c48d;
+}
+
+.bg-red-400 {
+  background-color: #e74c3c;
+}
