--- a/templates/Default/index.html.twig
+++ b/templates/Default/index.html.twig
@@ -1,13 +1,13 @@
 {% extends "base.html.twig" %}
 
 {% block content %}
-<p class="mb-4 text-center">
+<p class="mb-4 has-text-centered">
     <small>
         <a class="underline" href="{{ path('notify') }}">Subscribe to RFC vote notifications</a>
     </small>
 </p>
 
-<div>
+<div class="column is-three-fifths is-offset-one-fifth">
     {{ include('Default/rfcs.html.twig', {title: "Currently Active RFCs", rfcs: activeRfcs, logged_in: logged_in}) }}
 
     {% for phpVersion, rfcs in otherRfcs %}
