--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,12 +8,12 @@
         <link rel="stylesheet" href="{{ asset('build/css/app.css') }}">
         <link type="application/atom+xml" rel="alternate" href="/atom.xml" />
     </head>
-    <body class="has-background-light">
+    <body class="has-background-light" style="min-height: 100vh">
         <nav class="navbar is-dark">
             <div class="navbar-brand">
                 <div class="navbar-item">
                     <a target="_blank" href="https://tideways.com?pk_campaign=rfcwatch" class="has-text-white">
-                        PHP RFC Watch is sponsored by <img class="image is-16x16 is-inline-block" src="/tideways.png" /> Tideways 
+                        PHP RFC Watch is sponsored by <img class="image is-16x16 is-inline-block" src="/tideways.png" /> Tideways
                         <span class="is-hidden-touch">- Profiling, Monitoring and Exception Tracking for PHP</span>
                     </a>
                 </div>
@@ -24,8 +24,8 @@
             <div class="columns">
                 <div class="column">
                     <h1 class="has-text-centered">
-                        <a class="is-size-1" href="/">
-                            <img class="image is-32x32 is-inline-block" src="/php.svg"> RFC Watch
+                        <a class="is-size-1 has-text-black" href="/">
+                            <img style="height: 2.5rem;" src="/php.svg"> RFC Watch
                         </a>
                     </h1>
                 </div>
@@ -54,7 +54,7 @@
         </main>
 
         <footer class="mt-10">
-            <div class="w-full text-center text-sm text-gray-800">
+            <div class="w-full has-text-centered is-size-6">
                 Built by <a href="https://tideways.com">Tideways.com</a> |
                 <a href="https://github.com/beberlei/php-rfc-watch">Github</a> |
                 <a href="/atom.xml">Atom Feed</a> |
