--- a/templates/Default/rfc.html.twig
+++ b/templates/Default/rfc.html.twig
@@ -1,6 +1,6 @@
 {% import 'Default/rfc_macros.html.twig' as macros %}
 
-<div class="card">
+<div class="card mb-4">
     <div class="card-content">
         {% if rfc.status == 'open' %}
             <span class="tag is-info mr-2">Active</span>
